<resources>
    <string name="app_name">Steins</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="loging_name">登陆</string>
    <string name="loging_account">账号</string>
    <string name="loging_password">密码</string>
    <string name="loging_hint_account">请输入账号</string>
    <string name="loging_hint_password">请输入密码</string>
    <string name="loging_register">注册</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="connect_error">链接错误</string>
    <string name="connect_timeout">链接超时</string>
    <string name="bad_network">互联网异常</string>
    <string name="parse_error">转换错误</string>
    <string name="unknown_error">未知错误</string>
    <string name="title_activity_acfun">ACfunActivity</string>
    <string name="hello_round">Hello Round World!</string>
    <string name="hello_square">Hello Square World!</string>
</resources>
