<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.21"
        android:gravity="center"
        android:text="@string/loging_name"
        android:textColor="@color/cardview_light_background"
        android:textColorLink="@color/cardview_light_background"
        android:textSize="36sp"
        tools:layout_gravity="center"
        tools:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="20dp"
        android:layout_weight="0.02"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.21"
            android:gravity="center"
            android:text="@string/loging_account"
            android:textColor="@color/cardview_light_background"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/login_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.21"
            android:ems="10"
            android:hint="@string/loging_hint_account"
            android:inputType="textPersonName"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textColorHint="@android:color/darker_gray" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="20dp"
        android:layout_weight="0.02"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.21"
            android:gravity="center"
            android:text="@string/loging_password"
            android:textColor="@color/cardview_light_background"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.21"
            android:ems="10"
            android:hint="@string/loging_hint_password"
            android:inputType="textPassword"
            android:textColorHint="@android:color/darker_gray" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/login_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="50dp"
            android:layout_weight="1"
            android:background="?android:attr/actionBarItemBackground"
            android:text="@string/loging_name"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            />

        <Button
            android:id="@+id/login_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="50dp"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:shadowRadius="10"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:text="@string/loging_register" />
    </LinearLayout>

</LinearLayout>